--- a/appspec.MyAppDeploymentGroup.yml
+++ b/appspec.MyAppDeploymentGroup.yml
@@ -5,9 +5,9 @@ files:
     destination: /home/ubuntu/My-Node-JS-Web-Application/web-app
 hooks:
   AfterInstall:
-    - location: My-Node-JS-Web-Application/web-app/scripts/install_dependencies.sh
+    - location: /scripts/install_dependencies.sh
       timeout: 300
       runas: ubuntu
-    - location: My-Node-JS-Web-Application/web-app/scripts/start_server.sh
+    - location: /scripts/start_server.sh
       timeout: 300
       runas: ubuntu
