--- a/appspec.MyAppDeploymentGroup.yml
+++ b/appspec.MyAppDeploymentGroup.yml
@@ -7,7 +7,7 @@ hooks:
   AfterInstall:
     - location: /scripts/install_dependencies.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
     - location: /scripts/start_server.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
