--- a/appspec.MyAppDeploymentGroup.yml
+++ b/appspec.MyAppDeploymentGroup.yml
@@ -4,10 +4,14 @@ files:
   - source: /
     destination: /home/ubuntu/My-Node-JS-Web-Application/web-app
 hooks:
+  BeforeInstall:
+    - location: scripts/install_dependencies.sh
+      timeout: 300
+      runas: root
+      # Explicitly use bash to execute the script
+      script: "bash scripts/install_dependencies.sh"
   AfterInstall:
-    - location: /scripts/install_dependencies.sh
+    - location: scripts/start_server.sh
       timeout: 300
       runas: root
-    - location: /scripts/start_server.sh
-      timeout: 300
-      runas: root
+      script: "bash scripts/start_server.sh"
