--- a/appspec.MyAppDeploymentGroup.yml
+++ b/appspec.MyAppDeploymentGroup.yml
@@ -5,7 +5,6 @@ files:
     destination: /home/ubuntu/My-Node-JS-Web-Application/web-app
 hooks:
   AfterInstall:
-    - location: scripts/start_server.sh
-      timeout: 300
-      runas: root
-      script: "bash scripts/start_server.sh"
+    - timeout: 300
+      runas: ubuntu
+      script: "cd /home/ubuntu/My-Node-JS-Web-Application/web-app; npm start"
