--- a/appspec.MyAppDeploymentGroup.yml
+++ b/appspec.MyAppDeploymentGroup.yml
@@ -4,6 +4,10 @@ files:
   - source: /
     destination: /home/ubuntu/My-Node-JS-Web-Application/web-app
 hooks:
+  BeforeInstall:
+    # No commands for BeforeInstall
+  AfterInstall:
+    # No commands for AfterInstall
   ApplicationStart:
     - runas: ubuntu
       timeout: 300
