--- a/web-app/package.json
+++ b/web-app/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "web-app",
-  "version": "1.0.0",
-  "description": "A simple web application with static and dynamic content",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+    "name": "web-app",
+    "version": "1.0.0",
+    "description": "A simple web application with static and dynamic contents",
+    "main": "app.js",
+    "scripts": {
+        "start": "node app.js"
+    },
+    "dependencies": {
+        "ejs": "^3.1.10",
+        "express": "^4.17.1"
+    }
 }
