--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "my nodejs web app",
     "main": "app.js",
     "scripts": {
-        "start": "node app.js"
+        "start": "node app.js",
+        "test": "echo \"No tests available yet\" && exit 0"
     },
     "dependencies": {
         "ejs": "^3.1.10",
